Most of the layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,133 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Nav bar start  -->
+    <header>
+      <div class="bg">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <nav class="navbar navbar-expand-lg navbar-light bg text-light">
+                <a class="navbar-brand" href="#"></a>
+                Yotes Lax </a>
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#navbarText"
+                  aria-controls="navbarText"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link text-light" href="#"
+                        >Home <span class="sr-only"></span></a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light" href="#">Roster</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light" href="#">Scholorships</a>
+                    </li>
+                  </ul>
+                  <span class="navbar-text text-light">
+                    #BeBetter
+                  </span>
+                </div>
+              </nav>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-6 text-center text-light padtop">
+              <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
+                totam corrupti perspiciatis. Alias enim pariatur voluptate
+                doloremque nostrum, ratione, totam sit nobis, nesciunt ut
+                aspernatur similique eius fugiat. Ipsa, fugit.
+              </p>
+              <div class="text-center"><button type="button" class="btn btn-warning btn-block">Recuits Form</button></div>
+            </div>
+            <div class="col-12 col-md-6 text-center video-pad">
+              <iframe
+                width="300"
+                height="300"
+                src="https://www.youtube.com/embed/B7ev_84eeow"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+ <!-- break after diagonal bg -->
+    <main>
+      <div class="bg-gold">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-4">
+              <div class="card" style="width: 18rem;">
+                  <img src="//placehold.it/200x200" class="card-img-top round-pic" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+          </div>
+          <div class="col-12 col-md-4"><div class="card" style="width: 18rem;">
+              <img src="//placehold.it/200x200" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div></div>
+          <div class="col-12 col-md-4"><div class="card" style="width: 18rem;">
+              <img src="//placehold.it/200x200" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div></div>
+        </div>
+      </div>
+    </div>
+    <div class="row-break bg"></div>
+    </main>
+    <!-- This is the start of after the line break -->
+    <main>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-md-6 bottom-pic">
+            <div class="bottom-pic">
+            <img  src="//placehold.it/550x370" class="bottom-image"></img>
+          </div>
+          </div>
+          <div class="col-12 col-md-6 bottom-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quae? Illum sed officiis saepe consequatur, vel quis dolore cupiditate suscipit tempora sunt ab, veniam temporibus repellat! Soluta cum voluptate harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eius repellendus, quos iste et rerum iure dolorem nulla debitis, error voluptas. Iusto minus minima ab quidem at unde doloribus sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores soluta voluptate accusantium officia quo fuga error, delectus harum assumenda iusto odio exercitationem fugiat sint qui aliquam omnis illum. Eos, quia!
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 bg logo-image">
+            <div> <img src="//placehold.it/100x100" alt="..."></div>
+          </div>
+        </div>
+      </div>
+
+    </main>
+    <footer></footer>
+  </body>
 </html>
