--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       <div class="bg">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-12">
+            <div class="col-12 text-center">
               <nav class="navbar navbar-expand-lg navbar-light bg text-light">
-                <a class="navbar-brand" href="#"></a>
-                Yotes Lax </a>
+                <a class="navbar-brand" href="#">
+                  <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="" class="logo-image">
+                </a>
                 <button
                   class="navbar-toggler"
                   type="button"
@@ -56,6 +57,7 @@
           </div>
           <div class="row">
             <div class="col-12 col-md-6 text-center text-light padtop">
+              <h2>College of Idaho</h2>
               <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
                 totam corrupti perspiciatis. Alias enim pariatur voluptate
@@ -66,7 +68,7 @@
             </div>
             <div class="col-12 col-md-6 text-center video-pad">
               <iframe
-                width="300"
+                width="500"
                 height="300"
                 src="https://www.youtube.com/embed/B7ev_84eeow"
                 frameborder="0"
@@ -83,7 +85,7 @@
       <div class="bg-gold">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-md-6 col-lg-4">
               <div class="card" style="width: 18rem;">
                   <img src="//placehold.it/200x200" class="card-img-top round-pic" alt="...">
                   <div class="card-body">
@@ -93,22 +95,23 @@
                   </div>
                 </div>
           </div>
-          <div class="col-12 col-md-4"><div class="card" style="width: 18rem;">
-              <img src="//placehold.it/200x200" class="card-img-top" alt="...">
+          <div class="col-12 col-md-6 col-lg-4"><div class="card" style="width: 18rem;">
+              <img src="//placehold.it/200x200" class="card-img-top round-pic" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div></div>
-          <div class="col-12 col-md-4"><div class="card" style="width: 18rem;">
-              <img src="//placehold.it/200x200" class="card-img-top" alt="...">
+          <div class="col-12 col-md-6 col-lg-4 text-center"><img  class="round-pic" src="//placehold.it/200x200" alt="">
+            <div class="card w-50 text-center">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Button</a>
               </div>
-            </div></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -119,8 +122,8 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 col-md-6 bottom-pic">
-            <div class="bottom-pic">
-            <img  src="//placehold.it/550x370" class="bottom-image"></img>
+            <div>
+            <img class="bottom-pic" src="https://pbs.twimg.com/media/Dy3UmOcUYAEnYtU.jpg"></img>
           </div>
           </div>
           <div class="col-12 col-md-6 bottom-text">
@@ -130,7 +133,7 @@
         </div>
         <div class="row">
           <div class="col-12 bg logo-image">
-            <div> <img src="//placehold.it/100x100" alt="..."></div>
+            <div> <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="..." class="logo-image pt-2"></div>
           </div>
         </div>
       </div>
