top image backgound

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <!-- Nav bar start  -->
     <header>
-      <div class="bg">
+      <div class="bg-img">
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 text-center">
-              <nav class="navbar navbar-expand-lg navbar-light bg text-light">
+              <nav class="navbar navbar-expand-lg navbar-light text-light">
                 <a class="navbar-brand" href="#">
                   <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="" class="logo-image">
                 </a>
@@ -69,7 +69,7 @@
             <div class="col-12 col-md-6 text-center video-pad">
               <iframe
                 width="500"
-                height="300"
+                height="290"
                 src="https://www.youtube.com/embed/B7ev_84eeow"
                 frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
