made a huge dent on mobile and max sizing

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <!-- Nav bar start  -->
     <header>
-      <div class="bg-img">
+      <div class="bg">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center text-light">
               <nav class="navbar navbar-expand-lg navbar-light text-light">
                 <a class="navbar-brand" href="#">
                   <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="" class="logo-image">
@@ -34,7 +34,7 @@
                 >
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarText">
+                <div class="collapse navbar-collapse text-light" id="navbarText">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                       <a class="nav-link text-light" href="#"
@@ -67,14 +67,8 @@
               <div class="text-center"><button type="button" class="btn btn-warning btn-block">Recuits Form</button></div>
             </div>
             <div class="col-12 col-md-6 text-center video-pad">
-              <iframe
-                width="500"
-                height="290"
-                src="https://www.youtube.com/embed/B7ev_84eeow"
-                frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+                <iframe width="460" height="215" src="https://www.youtube.com/embed/zEcnixg4Sj0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen 
+                class="w-75 p-3" style="max-width: 350"></iframe>
             </div>
           </div>
         </div>
@@ -85,29 +79,29 @@
       <div class="bg-gold">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-6 col-lg-4">
-              <div class="card" style="width: 18rem;">
-                  <img src="//placehold.it/200x200" class="card-img-top round-pic" alt="...">
-                  <div class="card-body">
+          <div class="col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
+              <div class="card w-100">
+                  <div class="card-body text-center text-light bg">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <a href="#" class="btn btn-primary btn-push">Button</a>
                   </div>
                 </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4"><div class="card" style="width: 18rem;">
-              <img src="//placehold.it/200x200" class="card-img-top round-pic" alt="...">
-              <div class="card-body">
+          <div class="col-12 col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
+              <div class="card w-100">
+                  <div class="card-body text-center text-light bg">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                    <a href="#" class="btn btn-primary">Button</a>
+                  </div>
+                </div>
+          </div>
+          <div class="col-12 col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
+            <div class="card w-100">
+              <div class="card-body text-center text-light bg">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div></div>
-          <div class="col-12 col-md-6 col-lg-4 text-center"><img  class="round-pic" src="//placehold.it/200x200" alt="">
-            <div class="card w-50 text-center">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <a href="#" class="btn btn-primary">Button</a>
               </div>
             </div>
@@ -123,7 +117,7 @@
         <div class="row">
           <div class="col-12 col-md-6 bottom-pic">
             <div>
-            <img class="bottom-pic" src="https://pbs.twimg.com/media/Dy3UmOcUYAEnYtU.jpg"></img>
+            <img class="bottom-pic w-100 p-3" src="https://pbs.twimg.com/media/Dy3UmOcUYAEnYtU.jpg" ></img>
           </div>
           </div>
           <div class="col-12 col-md-6 bottom-text">
@@ -137,7 +131,6 @@
           </div>
         </div>
       </div>
-
     </main>
     <footer></footer>
   </body>
