--- a/index.html
+++ b/index.html
@@ -79,33 +79,33 @@
       <div class="bg-gold">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
-              <div class="card w-100">
-                  <div class="card-body text-center text-light bg">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <a href="#" class="btn btn-primary btn-push">Button</a>
-                  </div>
+          <div class="col-12 col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
+            <div class="card w-100">
+                <div class="card-body text-center text-light bg">
+                  <h5 class="card-title">Card title</h5>
+                  <Lorem class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
+                  <a href="#" class="btn btn-primary">Button</a>
                 </div>
-          </div>
+              </div>
+        </div>
           <div class="col-12 col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
               <div class="card w-100">
                   <div class="card-body text-center text-light bg">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                    <Lorem class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
                     <a href="#" class="btn btn-primary">Button</a>
                   </div>
                 </div>
           </div>
           <div class="col-12 col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
             <div class="card w-100">
-              <div class="card-body text-center text-light bg">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="#" class="btn btn-primary">Button</a>
+                <div class="card-body text-center text-light bg">
+                  <h5 class="card-title">Card title</h5>
+                  <Lorem class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
+                  <a href="#" class="btn btn-primary">Button</a>
+                </div>
               </div>
-            </div>
-          </div>
+        </div>
         </div>
       </div>
     </div>
