--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Nav bar start  -->
     <header>
-      <div class="bg">
+      <div class="bg-img">
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 text-center text-light">
@@ -32,7 +32,7 @@
                   aria-expanded="false"
                   aria-label="Toggle navigation"
                 >
-                  <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon text-light"></span>
                 </button>
                 <div class="collapse navbar-collapse text-light" id="navbarText">
                   <ul class="navbar-nav mr-auto">
@@ -45,7 +45,7 @@
                       <a class="nav-link text-light" href="#">Roster</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-light" href="#">Scholorships</a>
+                      <a class="nav-link text-light" href="#">Scholarships</a>
                     </li>
                   </ul>
                   <span class="navbar-text text-light">
@@ -54,21 +54,20 @@
                 </div>
               </nav>
             </div>
-          </div>
+          
           <div class="row">
-            <div class="col-12 col-md-6 text-center text-light padtop">
+            <div class="col-12 col-md-6 text-center text-light">
               <h2>College of Idaho</h2>
               <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem
                 totam corrupti perspiciatis. Alias enim pariatur voluptate
                 doloremque nostrum, ratione, totam sit nobis, nesciunt ut
-                aspernatur similique eius fugiat. Ipsa, fugit.
+                aspernatur similique eius fugiat.
               </p>
-              <div class="text-center"><button type="button" class="btn btn-warning btn-block">Recuits Form</button></div>
+              <div class="text-center "><button type="button" class="btn button text-light bg btn-lg">Start the Process</button></div>
             </div>
             <div class="col-12 col-md-6 text-center video-pad">
-                <iframe width="460" height="215" src="https://www.youtube.com/embed/zEcnixg4Sj0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen 
-                class="w-75 p-3" style="max-width: 350"></iframe>
+              <iframe width="414" height="215" src="https://www.youtube.com/embed/V61GFUptJqM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -126,7 +125,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 bg logo-image">
+          <div class="col-12 bg ">
             <div> <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="..." class="logo-image pt-2"></div>
           </div>
         </div>
