card spill and button spill

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
                 <div class="collapse navbar-collapse text-light" id="navbarText">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link text-light" href="#"
+                      <a class="nav-link text-light shadow" href="#"
                         >Home <span class="sr-only"></span></a
                       >
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-light" href="#">Roster</a>
+                      <a class="nav-link text-light shadow" href="#">Roster</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-light" href="#">Scholarships</a>
+                      <a class="nav-link text-light shadow" href="#">Scholarships</a>
                     </li>
                   </ul>
-                  <span class="navbar-text text-light">
+                  <span class="navbar-text text-light shadow">
                     #BeBetter
                   </span>
                 </div>
@@ -65,7 +65,7 @@
                 doloremque nostrum, ratione, totam sit nobis, nesciunt ut
                 aspernatur similique eius fugiat.
               </p>
-              <div class="text-center"><button type="button" class="btn text-light bg btn-lg button">Start the Process</button></div>
+              <div class="text-center"><button type="button" class="btn text-light bg btn-lg top-button">Start the Process</button></div>
             </div>
             <div class="col-12 col-md-6 text-center video-pad">
               <iframe width="auto" height="auto" src="https://www.youtube.com/embed/V61GFUptJqM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -77,32 +77,32 @@
  <!-- break after diagonal bg -->
     <main>
       <div class="bg-gold">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-12 col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
+          <div class="col-12 col-md-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
             <div class="card w-100">
                 <div class="card-body text-center text-light bg">
-                  <h5 class="card-title">Card title</h5>
-                  <Lorem class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
-                  <a href="#" class="btn btn-primary">Button</a>
+                  <h5 class="card-title">Yotie Gang</h5>
+                  <p class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
+                  <a href="#" class="btn sm-button">Button</a>
                 </div>
               </div>
         </div>
-          <div class="col-12 col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
+          <div class="col-12 col-md-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
               <div class="card w-100">
                   <div class="card-body text-center text-light bg">
-                    <h5 class="card-title">Card title</h5>
-                    <p1 class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p1>
-                    <a href="#" class="btn btn-primary">Button</a>
+                    <h5 class="card-title">Academics</h5>
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
+                    <a href="#" class="btn sm-button">Button</a>
                   </div>
                 </div>
           </div>
-          <div class="col-12 col-lg-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
+          <div class="col-12 col-md-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
             <div class="card w-100">
                 <div class="card-body text-center text-light bg">
-                  <h5 class="card-title">Card title</h5>
-                  <Lorem class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
-                  <a href="#" class="btn btn-primary">Button</a>
+                  <h5 class="card-title">Season Outline</h5>
+                  <p class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
+                  <a href="#" class="btn sm-button">Button</a>
                 </div>
               </div>
         </div>
@@ -121,7 +121,7 @@
           </div>
           </div>
           <div class="col-12 col-md-6 bottom-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quae? Illum sed officiis saepe consequatur, vel quis dolore cupiditate suscipit tempora sunt ab, veniam temporibus repellat! Soluta cum voluptate harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eius repellendus, quos iste et rerum iure dolorem nulla debitis, error voluptas. Iusto minus minima ab quidem at unde doloribus sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores soluta voluptate accusantium officia quo fuga error, delectus harum assumenda iusto odio exercitationem fugiat sint qui aliquam omnis illum. Eos, quia!
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quae? Illum sed officiis saepe consequatur, vel quis dolore cupiditate suscipit tempora sunt ab, veniam temporibus repellat! Soluta cum voluptate harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eius repellendus, quos iste et rerum iure dolorem nulla debitis, error voluptas. Iusto minus minima ab quidem at unde doloribus sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </p>
           </div>
         </div>
