spacing is good at bottom

--- a/index.html
+++ b/index.html
@@ -113,20 +113,20 @@
     </main>
     <!-- This is the start of after the line break -->
     <main>
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
-          <div class="col-12 col-md-6 bottom-pic">
+          <div class="col-12 col-md-6 bottom-pic pt-20">
             <div>
-            <img class="bottom-pic w-100 p-3" src="https://pbs.twimg.com/media/Dy3UmOcUYAEnYtU.jpg" ></img>
+            <img class="w-100" src="https://pbs.twimg.com/media/Dy3UmOcUYAEnYtU.jpg" ></img>
           </div>
           </div>
-          <div class="col-12 col-md-6 bottom-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quae? Illum sed officiis saepe consequatur, vel quis dolore cupiditate suscipit tempora sunt ab, veniam temporibus repellat! Soluta cum voluptate harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eius repellendus, quos iste et rerum iure dolorem nulla debitis, error voluptas. Iusto minus minima ab quidem at unde doloribus sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          <div class="col-12 col-md-6 text-center">
+            <p class="bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quae? Illum sed officiis saepe consequatur, vel quis dolore cupiditate suscipit tempora sunt ab, veniam temporibus repellat! Soluta cum voluptate harum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eius repellendus, quos iste et rerum iure dolorem nulla debitis, error voluptas. Iusto minus minima ab quidem at unde doloribus sequi. 
             </p>
           </div>
         </div>
         <div class="row">
-          <div class="col-12 bg center">
+          <div class="col-12 bg text-center ">
             <div> <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="..." class="logo-image pt-2"></div>
           </div>
         </div>
