--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="card-body text-center text-light bg">
                   <h5 class="card-title">Yotie Gang</h5>
                   <p class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
-                  <a href="#" class="btn sm-button">Button</a>
+                  <a href="#" class="btn sm-button text-light shadow">Button</a>
                 </div>
               </div>
         </div>
@@ -93,7 +93,7 @@
                   <div class="card-body text-center text-light bg">
                     <h5 class="card-title">Academics</h5>
                     <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
-                    <a href="#" class="btn sm-button">Button</a>
+                    <a href="#" class="btn text-light sm-button shadow">Button</a>
                   </div>
                 </div>
           </div>
@@ -102,7 +102,7 @@
                 <div class="card-body text-center text-light bg">
                   <h5 class="card-title">Season Outline</h5>
                   <p class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
-                  <a href="#" class="btn sm-button">Button</a>
+                  <a href="#" class="btn  text-light sm-button shadow">Button</a>
                 </div>
               </div>
         </div>
