bottom nav bar frustrations

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 doloremque nostrum, ratione, totam sit nobis, nesciunt ut
                 aspernatur similique eius fugiat.
               </p>
-              <div class="text-center"><button type="button" class="btn text-light bg btn-lg top-button">Start the Process</button></div>
+              <div class="text-center"><button type="button" class="btn text-light bg btn-lg top-button grad shadow">Start the Process</button></div>
             </div>
             <div class="col-12 col-md-6 text-center video-pad">
               <iframe width="auto" height="auto" src="https://www.youtube.com/embed/V61GFUptJqM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -81,17 +81,17 @@
         <div class="row">
           <div class="col-12 col-md-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
             <div class="card w-100">
-                <div class="card-body text-center text-light bg">
-                  <h5 class="card-title">Yotie Gang</h5>
+                <div class="card-body text-center text-light bg grad">
+                  <h5 class="card-title shadow">Yotie Gang</h5>
                   <p class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
-                  <a href="#" class="btn sm-button text-light shadow">Button</a>
+                  <a href="#" class="btn sm-button text-light shadow-lg">Button</a>
                 </div>
               </div>
         </div>
           <div class="col-12 col-md-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
               <div class="card w-100">
-                  <div class="card-body text-center text-light bg">
-                    <h5 class="card-title">Academics</h5>
+                  <div class="card-body text-center text-light bg grad">
+                    <h5 class="card-title shadow">Academics</h5>
                     <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
                     <a href="#" class="btn text-light sm-button shadow">Button</a>
                   </div>
@@ -99,8 +99,8 @@
           </div>
           <div class="col-12 col-md-4 text-center card-pad"><img  class="round-pic" src="//placehold.it/200x200" alt="..">
             <div class="card w-100">
-                <div class="card-body text-center text-light bg">
-                  <h5 class="card-title">Season Outline</h5>
+                <div class="card-body text-center text-light bg grad">
+                  <h5 class="card-title shadow">Season Outline</h5>
                   <p class="card-text>">Lorem ipsum dolor sit, amet consectetur adipisicing elit." </p>
                   <a href="#" class="btn  text-light sm-button shadow">Button</a>
                 </div>
@@ -125,13 +125,28 @@
             </p>
           </div>
         </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-12 bg text-center ">
-            <div> <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="..." class="logo-image pt-2"></div>
+          <div class="col-12 bg text-center grad2">
+            <div> <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="..." class="logo-image pt-2 grad2"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class=" col-12 col-md-6">
+              <ul class="nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Campus Tour</a>
+                  </li>
+                  <li class="nav-item linked-1">
+                    <a class="nav-link active" href="#">Contact Us</a>
+                  </li>
+                </ul>
           </div>
         </div>
       </div>
-    </main>
-    <footer></footer>
+        </footer>
   </body>
 </html>
