Final Rough Draft/  few more tweaks left

--- a/index.html
+++ b/index.html
@@ -128,25 +128,56 @@
       </div>
     </main>
     <footer>
+      <div class="match">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 bg text-center grad2">
-            <div> <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="..." class="logo-image pt-2 grad2"></div>
+            <div> <img src="https://pbs.twimg.com/profile_images/810347579036680192/r5VCHa47_400x400.jpg" alt="..." class="logo-image pt-2 grad2"></div>
           </div>
         </div>
         <div class="row">
-          <div class=" col-12 col-md-6">
-              <ul class="nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Campus Tour</a>
-                  </li>
-                  <li class="nav-item linked-1">
-                    <a class="nav-link active" href="#">Contact Us</a>
-                  </li>
-                </ul>
-          </div>
-        </div>
-      </div>
+          <div class=" col-12 col-md-6 stack">
+              <nav class="navbar navbar-expand-lg navbar-light text-light">
+                  <a class="navbar-brand" href="#">
+                    <img src="https://mediad.publicbroadcasting.net/p/idaho/files/styles/x_large/public/201409/Yotes_logo.png" alt="" class="logo-image">
+                  </a>
+                  <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarText"
+                    aria-controls="navbarText"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                  >
+                    <span class="navbar-toggler-icon text-light"></span>
+                  </button>
+                  <div class="collapse navbar-collapse text-light" id="navbarText">
+                    <ul class="navbar-nav mr-auto">
+                      <li class="nav-item active">
+                        <a class="nav-link text-light" href="#"
+                          >Home <span class="sr-only"></span></a
+                        >
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Campus</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-light" href="#"></a>
+                      </li>
+                    </ul>
+                    <span class="navbar-text text-light linked-2">
+                      Contact
+                    </span>
+                  </div>
+                </nav>
+              </div>
+            </div>
+              </div>
+            </div>
+                    </div>
+                  </div>
+                </div>
         </footer>
   </body>
 </html>
